day2/11_deployment/python-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python
  labels:
    projekt: python
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: python
  template:
    metadata:
      labels:
        app: python
        projekt: python
    spec:
      containers:
      - name: python
        image: krajewskim/python-api:new
        resources: {}
        ports:
        - containerPort: 5002
          name: api
        livenessProbe:
          httpGet:
            path: /healthz
            port: api
        readinessProbe:
          tcpSocket:
            port: api
