day2/11_deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nbvh-ing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: python.127.0.0.1.nip.io
    http:
      paths:
      - path: /?(.*)
        pathType: Prefix
        backend:
          service:
            name: python
            port:
              number: 5002
